tenant property view

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,14 +32,17 @@
             android:value="@string/google_maps_key" />
 
         <activity android:name=".map.MapFragActivity">
+
+        </activity>
+        <activity android:name=".ui.AddPropertyActivity" />
+        <activity android:name=".ui.MoreActivity" />
+        <activity android:name=".ui.tenant.TenantPropertyViewActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.AddPropertyActivity" />
-        <activity android:name=".ui.MoreActivity"></activity>
     </application>
 
 </manifest>
