--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,18 +31,19 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity android:name=".map.MapFragActivity">
-
-        </activity>
-        <activity android:name=".ui.AddPropertyActivity" />
-        <activity android:name=".ui.MoreActivity" />
-        <activity android:name=".ui.tenant.TenantPropertyViewActivity">
+        <activity android:name=".map.MapFragActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.AddPropertyActivity" />
+        <activity android:name=".ui.MoreActivity" />
+        <activity android:name=".ui.tenant.TenantPropertyViewActivity">
+
+        </activity>
+        <activity android:name=".ui.tenant.PropertyMapActivity"></activity>
     </application>
 
 </manifest>
