--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,10 +18,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.property.PropertyActivity">
-
-
-        </activity>
+        <activity android:name=".ui.property.PropertyActivity"></activity>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -34,19 +31,20 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity android:name=".map.MapFragActivity">
-
-        </activity>
-        <activity android:name=".ui.AddPropertyActivity" />
+        <activity android:name=".map.MapFragActivity"></activity>
+        <activity android:name=".ui.property.AddPropertyActivity" />
         <activity android:name=".ui.MoreActivity" />
         <activity android:name=".ui.tenant.TenantPropertyViewActivity">
+
+        </activity>
+        <activity android:name=".ui.TenantInfoActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
 
+        </activity>
     </application>
 
 </manifest>
