--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.property.PropertyActivity"></activity>
+        <activity android:name=".ui.property.PropertyActivity">
+
+
+        </activity>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -38,12 +41,10 @@
 
         </activity>
         <activity android:name=".ui.TenantInfoActivity">
-        <activity android:name=".map.MapFragActivity">
+
 
         </activity>
-        <activity android:name=".ui.AddPropertyActivity" />
-        <activity android:name=".ui.MoreActivity" />
-        <activity android:name=".ui.tenant.TenantPropertyViewActivity" />
+
         <activity android:name=".ui.tenant.PropertyMapActivity" />
         <activity android:name=".crash.CrashAnazliticsActivity" />
 
@@ -57,7 +58,6 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
     </application>
 
