--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
+    implementation 'com.github.bumptech.glide:glide:4.7.1'
     //kotlin data binding
     kapt 'com.android.databinding:compiler:3.1.4'
     //rxjava + retrofit
@@ -76,10 +77,21 @@ dependencies {
         transitive = true;
     }
 
+    implementation 'de.hdodenhof:circleimageview:2.1.0'
     //firebase
-    implementation 'com.google.firebase:firebase-core:16.0.4'
+    implementation 'com.google.firebase:firebase-analytics:16.0.4'
+    implementation 'com.google.firebase:firebase-database:16.0.3'
+    implementation 'com.google.firebase:firebase-storage:16.0.3'
     implementation 'com.google.firebase:firebase-auth:16.0.5'
+    implementation 'com.google.firebase:firebase-config:16.1.0'
+    implementation 'com.google.android.gms:play-services-appinvite:16.0.4'
+    implementation 'com.google.firebase:firebase-messaging:17.3.4'
+    implementation 'com.google.firebase:firebase-appindexing:16.0.2'
+    implementation 'com.google.firebase:firebase-analytics:16.0.4'
 
     // Google
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
+
+    // Firebase UI
+    implementation 'com.firebaseui:firebase-ui-database:3.3.1'
 }
