--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,6 +57,7 @@
         <activity android:name=".ui.chat.ChatActivity" />
         <activity android:name=".ui.chat.PreChatLandlordActivity" />
         <activity android:name=".ui.chat.PreChatTenantActivity"></activity>
+        <activity android:name=".ui.tenant.TenantInputInfoActivity"/>
     </application>
 
 </manifest>
